# weekend-class-code

./: CONTRIBUTING.md
lesson-3/: nft-membership.workshop.ts
lesson-4/: README.md  next.config.mjs  package.json
lesson-4-complete/: .env.example  README.md  next.config.mjs  package.json
lesson-4-complete/src/app/: layout.tsx  page.tsx
lesson-4-complete/src/components/: BalanceDisplay.tsx  ProgramInteraction.tsx  TransferForm.tsx  WalletConnect.tsx
lesson-4-complete/src/idl/: counter.json
lesson-4/src/app/: layout.tsx  page.tsx
lesson-4/src/components/: BalanceDisplay.tsx  ProgramInteraction.tsx  SolanaProviders.tsx  TransactionStatus.tsx  TransferForm.tsx  WalletConnect.tsx
lesson-4/src/styles/: index.css
lesson-5/: Cargo.toml  README.md
lesson-5/src/: main.rs  workshop.rs
lesson-6/: Anchor.toml  README.md  package.json  tsconfig.json
lesson-6/programs/escrow/: Cargo.toml
lesson-6/programs/escrow/src/: lib.rs
lesson-6/tests/: escrow.ts
